syntax = "proto3";

package proto;

option go_package = "./proto";

message Crypto {
    int32 id = 1;
    string name = 2;
    int32 votes = 3;
}

message CreateCryptoRequest {
    string name = 1;
    int32 votes = 2;
}

message CreateCryptoResponse {
    Crypto crypto = 1;
}

message GetCryptoRequest {
    int32 id = 1;
}

message GetCryptoResponse {
    Crypto crypto = 1;
}

message UpdateCryptoRequest {
    Crypto crypto = 1;
}

message UpdateCryptoResponse {
    Crypto crypto = 1;
}

message DeleteCryptoRequest {
    int32 id = 1;
}

message DeleteCryptoResponse {
    Crypto crypto = 1;
}

message UpVoteCryptoRequest {
    int32 id = 1;
}
  
message UpVoteCryptoResponse {
    Crypto crypto = 1;
 }
  
message DownVoteCryptoRequest {
    int32 id = 1;
}
  
message DownVoteCryptoResponse {
    Crypto crypto = 1;
}

message StreamVoteRequest {
    int32 id = 1;
}

message StreamVoteResponse {
    int32 votes = 1;
}

service CryptoService {
    rpc CreateCrypto(CreateCryptoRequest) returns (CreateCryptoResponse);
    rpc GetCrypto(GetCryptoRequest) returns (GetCryptoResponse);
    rpc UpdateCrypto(UpdateCryptoRequest) returns (UpdateCryptoResponse);
    rpc DeleteCrypto(DeleteCryptoRequest) returns (DeleteCryptoResponse);
    rpc UpVoteCrypto(UpVoteCryptoRequest) returns (UpVoteCryptoResponse);
    rpc DownVoteCrypto(DownVoteCryptoRequest) returns (DownVoteCryptoResponse);
    rpc StreamVotesCrypto(StreamVoteRequest) returns (stream StreamVoteResponse);
}